--- a/ZooRacoes/resources/css/app.css
+++ b/ZooRacoes/resources/css/app.css
@@ -1,12 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap');
 
-*{
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
+* {
     padding: 0;
     margin: 0;
 }
 
-main{
+main {
     width: 100%;
 }
