refactor=> create desing landing page and model, controller and migrates.

--- a/ZooRacoes/resources/css/app.css
+++ b/ZooRacoes/resources/css/app.css
@@ -16,3 +16,13 @@ body {
 main {
     width: 100%;
 }
+
+.dog-icon{
+    position: absolute;
+    width: 14px;
+    height: 14px;
+    left: 218px;
+    top: 300px;
+
+
+}
